Fix overlapping div in header

--- a/src/app/styl/filter_bar.styl
+++ b/src/app/styl/filter_bar.styl
@@ -1,5 +1,4 @@
-.filter-bar,
-#header
+.filter-bar
 	z-index: 10
 	width: 100%
 	opacity: .97
