--- a/src/app/styl/title_bar.styl
+++ b/src/app/styl/title_bar.styl
@@ -2,7 +2,10 @@
 	z-index: 10
 	position: absolute
 	top: 0
-	height: 35px
+	opacity: .97
+	width: 100%
+	height: TitleHeight
+	background-color: #17181b
 	padding: 13px 0 0
 	text-align: center
 	-webkit-app-region: drag
